# toast-app

./: README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/token/: route.ts
frontend/components/: Toaster.tsx
src/: agent.py  notion_connector.py
